--- a/Backend/package.json
+++ b/Backend/package.json
@@ -54,9 +54,10 @@
     "@swc/core": "^1.13.2",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.16.5",
+    "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
